--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@mdi/font": "5.9.55",
     "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "gsap": "^3.12.5",
     "roboto-fontface": "*",
+    "smooth-scrollbar": "^8.8.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "^3.0.0-beta.0",
